@@ -79,7 +79,7 @@ The \-o, \-s and \-z option print configfile options to standard output.
 .RE
 .SH "FILES"
 .TP
-/etc/nsd/nsd.conf
+@nsdconfigfile@
 default
 .B NSD
 configuration file
