@@ -108,7 +108,7 @@ listens to the wildcard interface.
 .B \-c\fI configfile
 Read specified 
 .I configfile instead of the default
-.IR /etc/nsd/nsd.conf .
+.IR @nsdconfigfile@ .
 For format description see nsd.conf(5).
 .TP
 .B \-d
@@ -118,7 +118,7 @@ Turn on debugging mode, do not fork, stay in the foreground.
 Use the specified
 .I database
 instead of the default of
-.IR /var/db/nsd/nsd.db .
+.IR @dbfile@ .
 If a 
 .B zonesdir: 
 is specified in the config file this path can be relative to that 
@@ -167,7 +167,7 @@ default is 10.
 Use the specified
 .I pidfile
 instead of the platform specific default, which is mostly
-.IR /var/run/nsd.pid .
+.IR @pidfile@ .
 If a 
 .B zonesdir: 
 is specified in the config file, this path can be relative to that 
@@ -226,15 +226,15 @@ SIGUSR1
 Dump BIND8\-style statistics into the log. Ignored otherwise.
 .SH "FILES"
 .TP
-/var/db/nsd/nsd.db
+@dbfile@
 default
 .B NSD
 database
 .TP
-/var/run/nsd.pid
+@pidfile@
 the process id of the name server.
 .TP
-/etc/nsd/nsd.conf
+@nsdconfigfile@
 default
 .B NSD
 configuration file
