@@ -31,22 +31,22 @@ An example of a short nsd.conf file is below.
 .TP
 server:
 .RS 5
-database: "/var/db/nsd/nsd.db"
+database: "@dbfile@"
 .RE
 .RS 5
-username: nsd
+username: @user@
 .RE
 .RS 5
-logfile: "/var/log/nsd.log"
+logfile: "@logfile@"
 .RE
 .RS 5
-pidfile: "/var/run/nsd.pid"
+pidfile: "@pidfile@"
 .RE
 .RS 5
-difffile: "/var/db/nsd/ixfr.db"
+difffile: "@difffile@"
 .RE
 .RS 5
-xfrdfile: "/var/db/nsd/xfrd.state"
+xfrdfile: "@xfrdfile@"
 .RE
 .TP
 zone:
@@ -57,7 +57,7 @@ name: example.com
 # note that quotes are optional on the value
 .RE
 .RS 5
-zonefile: /etc/nsd/example.com.zone 
+zonefile: @configdir@/example.com.zone 
 .RE
 .SH "FILE FORMAT"
 There must be whitespace between keywords. Attribute keywords end 
@@ -124,7 +124,7 @@ option
 .TP
 .B database:\fR <filename>
 By default 
-.I /var/db/nsd/nsd.db
+.I @dbfile@
 is used. The specified file is used to store the compiled 
 zone information. Same as commandline option 
 .BR \-f.
@@ -171,7 +171,7 @@ Preferred EDNS buffer size for IPv6.
 .TP
 .B pidfile:\fR <filename>
 Use the pid file instead of the platform specific default, usually 
-.IR /var/run/nsd.pid. 
+.IR @pidfile@. 
 Same as commandline option 
 .BR \-P .
 .TP
@@ -207,7 +207,7 @@ file, log file) relative to this directory. Set the value to ""
 When NSD receives IXFR updates it will store them in this file. 
 This file contains the differences between the database file and the 
 latest zone version. Default is 
-.IR /var/db/nsd/ixfr.db .
+.IR @difffile@ .
 .TP
 .B xfrdfile:\fR <filename>
 The soa timeout and zone transfer daemon in NSD will save its state 
@@ -215,7 +215,7 @@ to this file. State is read back after a restart. The state file can
 be deleted without too much harm, but timestamps of zones will be 
 gone. For more details see the section on zone expiry behavior of 
 NSD. Default is
-.IR /var/db/nsd/xfrd.state .
+.IR @xfrdfile@ .
 .TP
 .B xrfd\-reload\-timeout:\fR <number>
 If this value is \-1, xfrd will not trigger a reload after a zone 
@@ -495,12 +495,12 @@ also function as a resolver or cache. The configuration options that
 BIND9 has for the resolver or caching thus have no equivalents for NSD.
 .SH "FILES"
 .TP
-/var/db/nsd/nsd.db
+@dbfile@
 default
 .B NSD
 database
 .TP
-/etc/nsd/nsd.conf
+@nsdconfigfile@
 default
 .B NSD
 configuration file
