@@ -113,35 +113,35 @@ nsd.db is rebuild and nsd is reloaded.
 .TP
 .B \-c\fI configfile
 Specify configfile to use instead of the default
-.IR /etc/nsd/nsd.conf .
+.IR @nsdconfigfile@ .
 .SH "FILES"
 .TP
-/etc/nsd/nsd.conf
+@nsdconfigfile@
 Configuration file for nsd to change default pathnames and
 .B NSD 
 flags. The zone names, pathnames to zone files and access control 
 lists are also in nsd.conf(5).
 .TP
-/var/db/nsd/nsd.db
+@dbfile@
 default
 .B NSD
 database
 .TP
-/var/db/nsd/nsd.db.lock
+@dbfile@.lock
 Lockfile for the
 .B NSD
 database access by operator tools.
 .TP
-/var/db/nsd/ixfr.db
+@difffile@
 Journal of zone transfers, the diff file containing the new zone 
 contents transferred.
 .TP
-/var/db/nsd/xfrd.state
+@xfrdfile@
 State for the zone transfer process of 
 .BR NSD. 
 Contains timeouts for the zones and whether zones are expired.
 .TP
-/var/run/nsd.pid
+@pidfile@
 the process id of the name server.
 .SH "DIAGNOSTICS"
 .LP
